2007-03-13      1.57    New UK allocations;
                        Bundle DBM::Deep cos old version is incompatible
2007-02-24	1.5601	New UK allocations
2006-12-08	1.56	New UK allocations; 
                        Updated OFCOM parser;
                        Loads of Number::Phone::Country updates -
                          +1: NANP overlays: 226, 438, 762, 769, 829;
                          +269: Split Mayotte/Comores;
                          +381/2: Yugoslavia's *still* breaking up! (RS and ME);
                          +61 89162/4: Cocos and Christmas islands
                          +672 3: Norfolk Island
                          +672 1 0/1/2/3: Australian Antarctic bases
                          +681: Wallace and Futuna (corrected CCTLD)
                          +881 0: ICO Global
                          +881 3: Ellipso
                          +881 6: Iridium
                          +881 7: Iridium
                          +881 8: Globalstar
2006-08-25      1.55    Damnit, 1.54's ...UK->location() was wrong
2006-08-24	1.54	And again!
2006-08-23      1.53    Doh!  How we loaded location data was buggy
2006-08-23      1.52    Documentation patches;
                        Corrected CHANGELOG entry for v1.51;
                        Added location data for the UK
2006-08-22      1.51    Updated UK data to access DATA filehandle directly,
                          which depends on DBM::Deep 0.97 and above.  This
                          saves even more memory and makes the module load
                          a lot faster;
                        New UK allocations;
                        Some improvements and fixes in OFCOM data parser;
                        Bug fixes :-( for UK numbers with a significant F digit
2005-10-16      1.5     UK data moved into an embedded DBM::Deep structure
                          to save memory (NB: this adds dependencies)
                        Added location() method